# cli

./: Cargo.toml  README.md  USAGE.md
.github/workflows/: release.yml
src/: device_cache.rs  discovery.rs  identity_store.rs  lib.rs  main.rs  netinfo.rs  selector.rs  stream_session.rs  trust.rs
src/commands/: conformance.rs  discover.rs  handshake.rs  identity.rs  mod.rs  ping.rs  session.rs  status.rs  trust.rs
src/commands/stream/: test.rs
