[package]
name = "alpine-protocol-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "alpine"
path = "src/main.rs"

[dependencies]
alpine-protocol-sdk = "0.1.15"
rand = "0.8"
serde_cbor = "0.11"
directories = "5.0"
crossterm = "0.27"
ratatui = "0.21"
base64 = "0.21"
ed25519-dalek = { version = "2.1", features = ["pkcs8", "rand_core"] }
# CLI
clap = { version = "4.5", features = ["derive"] }

# Async runtime
tokio = { version = "1.37", features = ["rt-multi-thread", "macros", "signal", "net", "time"] }

# Output helpers
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_bytes = "0.11"
get_if_addrs = "0.5"

# Logging (optional but recommended)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
anyhow = "1.0.100"
